<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="trip_name">Trip Name</string>
    <string name="enter_trip_name">Enter Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="add_trip">Add Trip</string>
    <string name="end_point">End Point</string>
    <string name="trip_details">Trip Details</string>
    <string name="noRepeat">No Repeat</string>
    <string name="repeatDaily">Repeat Daily</string>
    <string name="repeatWeekly">Repeat Weekly</string>
    <string name="repeatMonthly">Repeat Monthly</string>
    <string name="oneWay">One Way</string>
    <string name="towWay">Two Way</string>
    <string name="upComing">Up Coming</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_home2">Home2</string>
    <string name="title_activity_test">Test</string>
    <string name="update_trip">Update Trip</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="date">date</string>
    <string name="time">Time</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="repeat">Repeat</string>
    <string name="app_name">Trips</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an Account ?</string>
    <string name="go_login">Go Login</string>
    <string name="login_with">Login With</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="facebook_app_id">518920196231822</string>
    <string name="fb_login_protocol_scheme">fb518920196231822</string>
    <string name="please_verify_your_email_to_login">please verfiy</string>
    <string name="text_note">text note</string>
    <string name="going">going</string>
    <string name="coming_back">coming back</string>
    <string name="log_out">log out</string>
    <string name="language">language</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="transportation">transportation</string>
    <string name="train_or_bus">Train or Bus</string>
    <string name="walk">Walk</string>
    <string name="two_wheeler">Two Wheeler</string>

</resources>