<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
         android:layout_height="wrap_content">



    <TextView
        android:id="@+id/textView4"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
         android:gravity="center"
        android:text="@string/transportation" />

    <TextView
        android:id="@+id/tvBus"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_itme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_or_bus" />

    <TextView
        android:id="@+id/tvBicycle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_itme"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="Bicycle" />

    <TextView
        android:id="@+id/tvWalk"
        android:padding="12dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_itme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walk" />
    <TextView
        android:id="@+id/tvTwoWheeler"
        android:padding="12dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_itme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_wheeler" />
    </LinearLayout>

</LinearLayout>